Added images and styled them

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="logo primary-bg"><a href="/">Lewis Chatham</a></h1>
             <nav>
                 <ul>
-                    <li><a href="#">About me</a></li>
+                    <li><a href="#about-me">About me</a></li>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Contact me</a></li>
                     <li><a href="#">Resume</a></li>              
@@ -25,12 +25,14 @@
             </nav>
         </section>     
         <section class="hero">
-
+            <div class="hero-subtitle">
+                <h2>Meet the developer</h2>
+            </div>
         </section>
     </header>
-
+    
     <main>
-        <section class="main-section about-me">
+        <section id="about-me" class="main-section about-me">
             <h2>About me</h2>
             <section class="content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit porro itaque vitae recusandae sapiente similique deleniti delectus cupiditate atque dolor minima est ducimus obcaecati dolores dolorem quos saepe repudiandae eaque, voluptatum quaerat nesciunt velit placeat quis! Autem beatae mollitia vel tempore fuga eum quia. Quis atque quaerat nostrum ducimus sapiente!</p>
@@ -39,8 +41,40 @@
         </section>
         <section class="main-section work">
             <h2>Work</h2>
-            <section class="content">
-                
+            <section class="content cards">
+                <div id="surf-report" class="card">
+                    <div class="card-title">
+                        <h3>Surf Report</h3>
+                        <p>MERN Stack</p>
+                    </div>
+                </div>
+
+                <div id="LED-wall" class="card">
+                    <div class="card-title">
+                        <h3>LED Wall</h3>
+                        <p>Node / IoT</p>
+                    </div>                
+                </div>
+
+                <div id="calculator" class="card">
+                    <div class="card-title">
+                        <h3>Calculator</h3>
+                        <p>React / JavaScript / CSS</p>
+                    </div> 
+                </div>
+
+                <div id="pastel-puzzle" class="card">
+                    <div class="card-title">
+                        <h3>Pastel Puzzle</h3>
+                        <p>MERN Stack</p>
+                    </div>        
+                </div>
+                <div id="run-buddy" class="card">
+                    <div class="card-title">
+                        <h3>Run Buddy</h3>
+                        <p>HTML / CSS</p>
+                    </div>            
+                </div>
             </section>
         </section>
     </main> 
@@ -52,9 +86,9 @@
                 <ul class="links">
                     <li class="number"><a href="#">(+44) 7723 610 963</a></li>
                     <li class="email"><a href="mailto:lewis.chatham@outlook.com">lewis.chatham@outlook.com</a></li>
-                    <li class="github"><a href="https://github.com/LewisChatham">GitHub</a></li>
-                    <li class="linkedIn"><a href="">LinkedIn</a></li>
-                    <li class="spotify"><a href="">Spotify</a></li>
+                    <li class="github"><a href="https://github.com/LewisChatham" target="_blank">GitHub</a></li>
+                    <li class="linkedIn"><a href="https://www.linkedin.com/in/lewis-chatham-260765184/" target="_blank">LinkedIn</a></li>
+                    <li class="spotify"><a href="https://open.spotify.com/user/1118996051?si=684972d6bc5344db" target="_blank">Spotify</a></li>
                 </ul>         
             </section>
         </section>
