finishing touches and responsiveness

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <nav>
                 <ul>
                     <li><a href="#about-me">About me</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Contact me</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#contact-me">Contact me</a></li>
                     <li><a href="#">Resume</a></li>              
                 </ul>
             </nav>
@@ -30,51 +30,63 @@
             </div>
         </section>
     </header>
-    
+
     <main>
-        <section id="about-me" class="main-section about-me">
+        <section id="about-me" class="main-section">
             <h2>About me</h2>
-            <section class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit porro itaque vitae recusandae sapiente similique deleniti delectus cupiditate atque dolor minima est ducimus obcaecati dolores dolorem quos saepe repudiandae eaque, voluptatum quaerat nesciunt velit placeat quis! Autem beatae mollitia vel tempore fuga eum quia. Quis atque quaerat nostrum ducimus sapiente!</p>
-                <p>Laudantium doloremque dignissimos iste odit eligendi voluptas ipsa necessitatibus ad quidem aliquid consectetur corrupti ea atque suscipit assumenda dolores magnam dolorem obcaecati, repellendus praesentium nostrum rerum quas. Labore delectus sed porro nostrum optio illum in? Amet ut numquam autem dolorum nostrum iusto repellat nesciunt maxime nobis qui! Fugit, cum possimus?</p>
+            <section class="content about-me">
+                <figure>
+                    <img id="Lewis" src="./assets/images/lewis.png" alt="Picture of Lewis Chatham">
+                </figure>
+                <div class="bio">
+                    <p>Hello, my name is Lewis Chatham and I am a software developer. I have always had a mathematics background, and love problem solving. This is what got me into coding. Since starting my journey as a developer, my passion for learning and truly undertstanding has increased no end. I am constantly seeking to imporve the way I do things and strive for perfection in everything I do.</p>
+                    <p>My Hobbies include sports such as Judo, Hockey, Tennis, Trampolining and Gymnastics. I have a real love for all kinds of music and have taught myself piano & guitar. I'm also a big fan of PC games, and enjoy these in my free time. I also have 2 cats called Luna and Cosmo.</p>
+                </div>
+                
             </section>
         </section>
-        <section class="main-section work">
+        <section id="work" class="main-section">
             <h2>Work</h2>
             <section class="content cards">
-                <div id="surf-report" class="card">
+                <a href="#" id="surf-report" class="card">
+                    <div class="color-overlay"></div>
                     <div class="card-title">
                         <h3>Surf Report</h3>
                         <p>MERN Stack</p>
                     </div>
-                </div>
+                </a>
 
-                <div id="LED-wall" class="card">
+                <a href="#" id="LED-wall" class="card">
+                    <div class="color-overlay"></div>
                     <div class="card-title">
                         <h3>LED Wall</h3>
                         <p>Node / IoT</p>
                     </div>                
-                </div>
+                </a>
 
-                <div id="calculator" class="card">
+                <a href="#" id="calculator" class="card">
+                    <div class="color-overlay"></div>
                     <div class="card-title">
                         <h3>Calculator</h3>
                         <p>React / JavaScript / CSS</p>
                     </div> 
-                </div>
+                </a>
 
-                <div id="pastel-puzzle" class="card">
+                <a href="#" id="pastel-puzzle" class="card">
+                    <div class="color-overlay"></div>
                     <div class="card-title">
                         <h3>Pastel Puzzle</h3>
                         <p>MERN Stack</p>
                     </div>        
-                </div>
-                <div id="run-buddy" class="card">
+                </a>
+
+                <a href="#" id="run-buddy" class="card">
+                    <div class="color-overlay"></div>
                     <div class="card-title">
                         <h3>Run Buddy</h3>
                         <p>HTML / CSS</p>
                     </div>            
-                </div>
+                </a>
             </section>
         </section>
     </main> 
