Added readme and final changes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </main> 
 
     <footer>
-        <section class="main-section contact-me">
+        <section id="contact-me" class="main-section contact-me">
             <h2>Contact me</h2>
             <section class="content">
                 <ul class="links">
